<resources>
    <string name="app_name">Список дел</string>
    <string name="task_title_hint">Введите название</string>
    <string name="task_title_label">Название:</string>
    <string name="task_details_label">Детали:</string>
    <string name="task_description">Описание:</string>
    <string name="task_description_hint">Введите описание</string>
    <string name="task_do_until">Выполнить до:</string>
    <string name="reminder_label">Напоминание</string>
    <string name="reminder_text">Для добавления напоминания выберите нужную дату и время и нажмите ОК
        (по умолчанию стоит время, указанное в поле &quot;Выполнить до&quot;).</string>
    <string name="reminder_ok">ОК</string>
    <string name="reminder_cancel">Отмена</string>
    <string name="reminder_date_label">Дата напоминания:</string>
    <string name="reminder_time_label">Время напоминания:</string>
    <string name="task_reminder">Установить напоминание?</string>
    <string name="task_add_reminder_label">Добавить напоминание</string>
    <string name="task_reset_reminder_label">Изменить напоминание</string>
    <string name="task_delete_reminder_label">Удалить напоминание</string>
    <string name="task_reminder_string">Напоминание установлено на\n</string>
    <string name="tasks_title">Список дел</string>
    <string name="task_no_title">Дело</string>
    <string name="task_date_label">Дата выполнения:</string>
    <string name="task_time_label">Время выполнения:</string>
    <string name="new_task">Добавить дело</string>
    <string name="delete_task">Удалить дело</string>
    <string name="delete_tasks">Удалить дела</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="choose_task">Выберите дело из списка</string>
    <string name="or">или</string>
    <string name="create_new_task">Создайте новое</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="information_label">Справка</string>
    <string name="information_beginning">Данное приложение предоставляет возможность создать
        список дел, которые вы хотите выполнить к какому-то сроку. Для каждого дела можно указать
        название, описание, добавить фотографию, установить дату и время выполнения, а также
        установить звуковое напоминание в определенное время.</string>
    <string name="information_interface">Интерфейс</string>
    <string name="information_interface_text">Приложение имеет различный внешний вид на телефоне и на планшете.
        \nНа телефоне первый экран, который вы видите при запуске приложения, - это сам список дел. При нажатии на
        любой элемент списка открывается окно детализации выбранного дела.
        \nЕсли у вас в списке больше, чем одно дело, то вы можете в окне детализации переключаться от одного дела
        к другому при помощи пролистывания вправо или влево.
        \nНа планшете при запуске открывается две области: в левой находится сам список дел, в правой при нажатии
        на элемент списка показывается окно детализации.
    </string>
    <string name="information_list">Список</string>
    <string name="information_list_text">
        При первом запуске список пуст, а на экране отображается кнопка добавления нового дела. Если же вы уже добавили
        одно или несколько дел, то на экране отображаются все добавленные на данный момент дела. Каждый элемент списка
        содержит название дела, дату и время его выполнения, а также показывает, установлено или нет напоминание.
    </string>
    <string name="information_list_add">Добавление нового дела</string>
    <string name="information_list_add_text">
        Чтобы добавить новое дело, нужно в окне списка нажать на кнопку &quot;+&quot;, которая отображается вверху справа.
        Также, если ваш список дел пуст, то на месте этого списка появляется кнопка &quot;Добавить дело&quot;.
    </string>
    <string name="information_list_delete">Удаление дел</string>
    <string name="information_list_delete_text">
        Чтобы удалить одно или несколько дел, в окне списка нажмите и удерживайте то дело, которое вы хотите удалить.
        Если нужно удалить несколько дел, их можно выбрать нажатием. Выбранные элементы подсвечиваются серым цветом.
        Чтобы их удалить, нужно нажать кнопку &quot;Корзина&quot;, которая отображается вверху слева.
        Для отмены выделения нужно либо нажать на галочку слева вверху, либо повторным нажатием снять выделение.
        \nТакже можно удалить дело, открыв его и нажав на кнопку &quot;Корзина&quot; вверху слева.
        \nВнимание! Удаленные дела восстановить нельзя!
    </string>
    <string name="information_element">Окно детализации</string>
    <string name="information_element_text">
        Окно детализации включает в себя поле названия дела, слева от него - окно фотографии и кнопка для добавления
        фотографии, ниже - поле описания, кнопки установки даты и времени выполнения, а также флажок для
        установки напоминания.
        \nВ поле названия вы указываете название дела, в поле описания - его описание (не обязательно). Остальные элементы
        рассматриваются ниже.
    </string>
    <string name="information_photo">Фотография</string>
    <string name="information_photo_text">
        Для каждого дела Вы можете добавить одну фотографию, создав ее или выбрав из галереи.
        \nДля создания фотографии нажмите в окне детализации на кнопку с изображением камеры - откроется
        стандартное приложение для фотографирования, установленное на вашем устройсте.
        \nЧтобы выбрать уже созданную фотографию, нажмите кнопку с изображением картины - откроется галерея. Когда
        вы выберете нужное фото, приложение сохранит себе его копию.
        \nПосле добавления фотографии, Вы сможете увидеть ее над кнопками для фото в окне детализации.
        \nЕсли вы хотите изменить фотографию, снова нажмите на кнопку и повторите выше описанные действия
        (старая фотография будет заменена новой).
        \nДля удаления фотографии нажмите и удерживайте окно с фото, в появившемся меню выберите &quot;Удалить фото&quot;.
        \nВнимание! После удаления фотографию в приложении восстановить нельзя!
    </string>
    <string name="information_date">Дата и время</string>
    <string name="information_date_text">
        Также Вы можете указать дату и время, до наступления которых вы должны выполнить дело. По умолчанию при добавлении
        дела устанавливаются текущие дата и время на устройстве. Чтобы их изменить, нажмите соответсвующую кнопку для
        каждого, в открывшем окне укажите нужную дату/время и нажмите &quot;ОК&quot;.
    </string>
    <string name="information_reminder">Напоминание</string>
    <string name="information_reminder_text">
        Одной из главных функций приложения является возможность установить напоминание. Для этого в окне детализации дела
        поставьте галочку в пункте &quot;Установить напоминание?&quot;, по умолчанию время напоминание устанавливается
        то же, что и указано в пункте &quot;Выполнить до&quot;.
        \nВнимание! Если для напоминания указаны дата и время, которые уже наступили, то напоминание не сработает.
        Для его работы нужно указать время позже времени телефона - нажмите на кнопку &quot;Изменить напоминание&quot;,
        укажите нужные дату и время и нажмите &quot;ОК&quot;.
        \nДля отмены напоминания снимите галочку, для удаления информации о напоминании поставьте галочку и нажмите
        кнопку &quot;Удалить напоминание&quot;.
        \nВнимание! При перезагрузке устройства все напоминания отменяются! Для повторной установки напоминаний повторите
        выше описанные действия.
    </string>
    <string name="notification_title">Время для дела пришло!</string>
    <string name="notification_text">Вам пора выполнить дело!</string>
    <string name="error_deleting_jpeg">Не удалось удалить фото</string>
</resources>
